reorganise the navigation

--- a/templates/common/form/input_textarea.html
+++ b/templates/common/form/input_textarea.html
@@ -18,8 +18,8 @@
                 {{ error }}
             </p>
         {% endfor %}
-        {% include "common/comment_icon.html" with form_input=form_input object_field=object_field comments=comments %}
+        {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
     </div>
 </div>
 
-{% include "common/comment_dialog.html" with form_input=form_input convention=convention object_field=object_field comments=comments %}
+{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name  convention=convention object_field=object_field comments=comments %}
