--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -20,13 +20,12 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
+            {% include "common/form/conventionform_header.html" %}
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12  fr-my-5w">
-                        {% include "common/convention_edit_info.html" with convention=convention %}
-                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Informations cadastrales sur le programme</h2>
-                        {% include "common/mandatory_fields_info.html" %}
+                        <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Informations cadastrales sur le programme</h2> -->
 
                         <h4>Permis et dates</h4>
 
@@ -121,8 +120,8 @@
                                             {% if convention.statut != 'BROUILLON' %}
                                                 {% with input_id="reference_cadastrale_"|add:form_cadastre.uuid.value object_field="reference_cadastrale__uuid__"|add:form_cadastre.uuid.value %}
                                                     <td id="{{form_cadastre.uuid.id_for_label}}_div">
-                                                        {% include "common/comment_icon.html" with form_input=form_cadastre.uuid object_field=object_field comments=comments %}
-                                                        {% include "common/comment_dialog.html" with form_input=form_cadastre.uuid convention=convention object_field=object_field comments=comments %}
+                                                        {% include "common/comment_icon.html" with form_input_id=form_cadastre.uuid.id_for_label object_field=object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input_id=form_cadastre.uuid.id_for_label form_input_html=form_cadastre.uuid.html_name convention=convention object_field=object_field comments=comments %}
                                                     </td>
                                                 {% endwith %}
                                             {% endif %}
@@ -138,6 +137,7 @@
                     </div>
                 </div>
 
+                {% include "common/mandatory_fields_info.html" %}
                 <div class="fr-col-md-12  fr-py-5w button-bar">
                     {% include "common/button/previous.html" with precedent='conventions:programme' convention_uuid=convention.uuid %}
                     {% if editable %}
@@ -151,12 +151,4 @@
             </form>
         </div>
     </div>
-    <!-- <form action="/upload/" method="POST" class="dropzone dz">
-    {% csrf_token %}
-    <div class="fallback">
-        <input name="file" type multiple />
-    </div>
-</form> -->
-
-
 {% endblock %}
