--- a/templates/conventions/comments.html
+++ b/templates/conventions/comments.html
@@ -19,18 +19,18 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         <div class="fr-container">
+            {% include "common/form/conventionform_header.html" %}
             <form method="post" action="">
                 {% csrf_token %}
 
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12  fr-my-5w">
-                        {% include "common/convention_edit_info.html" with convention=convention %}
-                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Informations complémentaires</h2>
-                        {% include "common/mandatory_fields_info.html" %}
+                        <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Informations complémentaires</h2> -->
                         {% include "common/form/input_upload.html" with label="Ajoutez vos commentaires à l'attention de l'instructeur" form_input=form.comments form_input_files=form.comments_files object_name='convention' object_uuid=convention.uuid file_list=convention.comments_files.values textarea=True verticalDisplay=True object_field="convention__comments__"|add:form.uuid.value %}
-
                     </div>
                 </div>
+
+                {% include "common/mandatory_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12  fr-py-5w">
                     {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
                     {% if editable %}
