--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -11,13 +11,12 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner fr-pb-1w">
         <div class="fr-container">
+            {% include "common/form/conventionform_header.html" %}
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12  fr-my-5w">
-                        {% include "common/convention_edit_info.html" with convention=convention %}
-                        <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Stationnements</h2>
-                        {% include "common/mandatory_fields_info.html" %}
+                        <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Stationnements</h2> -->
 
                         <h4>Liste des stationnements associés au lot conventionné</h4>
 
@@ -66,8 +65,8 @@
                                             {% if convention.statut != 'BROUILLON' %}
                                                 {% with input_id="type_stationnement_"|add:form.uuid.value object_field="type_stationnement__uuid__"|add:form.uuid.value %}
                                                     <td id="{{form.uuid.id_for_label}}_div">
-                                                        {% include "common/comment_icon.html" with form_input=form.uuid object_field=object_field comments=comments %}
-                                                        {% include "common/comment_dialog.html" with form_input=form.uuid convention=convention object_field=object_field comments=comments %}
+                                                        {% include "common/comment_icon.html" with form_input_id=form.uuid.id_for_label object_field=object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input_id=form.uuid.id_for_label form_input_html=form.uuid.html_name convention=convention object_field=object_field comments=comments %}
                                                     </td>
                                                 {% endwith %}
                                             {% endif %}
@@ -78,6 +77,7 @@
                         </div>
                     </div>
                 </div>
+                {% include "common/mandatory_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12  fr-py-5w">
                     {% include "common/button/previous.html" with precedent='conventions:annexes' convention_uuid=convention.uuid %}
                     {% if editable %}
