--- a/templates/common/form/input_text.html
+++ b/templates/common/form/input_text.html
@@ -16,7 +16,7 @@
             name="{{form_input.html_name}}"
             value="{{ form_input.value|default_if_none:'' }}"
             {% if not editable %}disabled{% endif %}>
-        {% include "common/comment_icon.html" with form_input=form_input object_field=object_field comments=comments %}
+        {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
     </div>
     {% for error in form_input.errors %}
         <p id="text-input-error-desc-error" class="fr-error-text">
@@ -25,5 +25,5 @@
     {% endfor %}
 </div>
 
-{% include "common/comment_dialog.html" with form_input=form_input convention=convention object_field=object_field comments=comments %}
+{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name convention=convention object_field=object_field comments=comments %}
 
