--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -15,7 +15,7 @@
                 {% endif %}
                 {% include "common/help_field.html" with form_input=form_input %}
             </label>
-            {% include "common/comment_icon.html" with form_input=form_input object_field=object_field comments=comments %}
+            {% include "common/comment_icon.html" with form_input_id=form_input.id_for_label object_field=object_field comments=comments %}
         </div>
 
         {% if textarea %}
@@ -105,4 +105,4 @@
     {% endfor %}
 </div>
 
-{% include "common/comment_dialog.html" with form_input=form_input convention=convention object_field=object_field comments=comments %}
+{% include "common/comment_dialog.html" with form_input_id=form_input.id_for_label form_input_html=form_input.html_name  convention=convention object_field=object_field comments=comments %}
