--- a/templates/conventions/selection.html
+++ b/templates/conventions/selection.html
@@ -11,14 +11,11 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         <div class="fr-container">
-            {{nonce}}
+            {% include "common/form/conventionform_header.html" %}
             <form method="post" action="">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12  fr-my-5w">
-                        <h2 class="fr-mb-3w">Etape {{convention_form_step}}/{{ nb_steps }} - Choix du programme à conventionner</h2>
-                        {% include "common/mandatory_fields_info.html" %}
-
+                    <div class="fr-col-md-12 fr-mt-5w">
                         <div class="fr-mb-3w fr-form-group">
                             <fieldset class="fr-fieldset">
                                 <div class="fr-fieldset__content">
@@ -54,7 +51,7 @@
                                                 {% endfor %}
                                             </select>
                                             {% if convention %}
-                                                {% include "common/comment_icon.html" with form_input=form.lot_uuid object_field="lot__uuid__"|add:form.lot_uuid.value comments=comments %}
+                                                {% include "common/comment_icon.html" with form_input_id=form.lot_uuid.id_for_label object_field="lot__uuid__"|add:form.lot_uuid.value comments=comments %}
                                             {% endif %}
                                         </div>
                                         {% for error in form.lot_uuid.errors %}
@@ -63,7 +60,7 @@
                                             </p>
                                         {% endfor %}
                                         {% if convention %}
-                                            {% include "common/comment_dialog.html" with form_input=form.lot_uuid convention=convention object_field="lot__uuid__"|add:form.lot_uuid.value comments=comments %}
+                                            {% include "common/comment_dialog.html" with form_input_id=form.lot_uuid.id_for_label form_input_html=form.lot_uuid.html_name convention=convention object_field="lot__uuid__"|add:form.lot_uuid.value comments=comments %}
                                         {% endif %}
                                     </div>
 
@@ -117,12 +114,11 @@
                                 </div>
                             </fieldset>
                         </div>
-
-
-
-
                     </div>
                 </div>
+
+                {% include "common/mandatory_fields_info.html" %}
+
                 <div class="form-button-footer fr-col-md-12  fr-py-5w">
                     <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
                         Revenir à l'étape précédente
