--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -24,6 +24,7 @@
 
         <link rel="stylesheet" href="{% static "dsfr/css/dsfr.min.css" %}">
         <link rel="stylesheet" href="{% static "css/main.css" %}">
+        <link rel="stylesheet" href="{% static "css/step_progressbar.css" %}">
         {% block css_extras %}{% endblock %}
 
         <!--Js-->
