--- a/templates/common/display_field_if_exists.html
+++ b/templates/common/display_field_if_exists.html
@@ -4,7 +4,7 @@
             <div class="block--row-strech-1">
                 <p class="fr-my-1w">{% if label %}{{label}} : {% endif %}{{value}}</p>
             </div>
-            {% include "common/comment_icon.html" with form_input_id=object_field object_field=object_field comments=comments %}
+            {% include "common/comment_icon.html" with form_input_id=object_field object_field=object_field comments=comments small=True %}
         </div>
         {% include "common/comment_dialog.html" with form_input_id=object_field form_input_html=object_field convention=convention object_field=object_field comments=comments %}
     {% else %}
