--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -20,6 +20,7 @@
                         <h4>Entreprise bailleur</h4>
 
                         {% include "common/form/input_text.html" with form_input=form.nom label="Nom du bailleur" object_field="bailleur__nom__"|add:form.uuid.value %}
+
                         <div class="fr-mb-2w">
                             <div class="fr-grid-row fr-grid-row--gutters">
                                 <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
@@ -63,11 +64,44 @@
                 {% include "common/mandatory_fields_info.html" %}
                 <div class="form-button-footer fr-col-12 fr-col-md-12  fr-py-5w">
 
-                    {% include "common/button/previous.html" with precedent='conventions:selection_update' convention_uuid=convention.uuid %}
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:bailleur' convention_uuid=convention.uuid editable=editable %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:bailleur' convention_uuid=convention.uuid %}
+                        {% include "common/button/previous.html" with precedent='conventions:selection_update' convention_uuid=convention.uuid %}
                     {% else %}
-                        {% include "common/button/next.html" with suivant='conventions:programme' convention_uuid=convention.uuid %}
+                        <div>
+                            <div id="save_after_comments" hidden>
+                                <button class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" id='atomic_button' name='UpdateAtomic' value='True'>
+                                    Enregistrer et retour au Récapitulatif
+                                </button>
+                            </div>
+                            <div id="back_to_recap" hidden>
+                                <button type='button' class="fr-btn fr-fi-arrow-right-s-line fr-btn--icon-right" type="button" id="return_recap">
+                                    Retour au Récapitulatif
+                                </button>
+                                <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                    document.addEventListener('DOMContentLoaded', function () {
+                                        document.getElementById('return_recap')
+                                            .addEventListener('click', function(){ location.href='{% url "conventions:recapitulatif" convention_uuid=convention.uuid %}' });
+                                    });
+                                </script>
+                            </div>
+                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                if (
+                                    document.getElementsByClassName('content__icons--red').length
+                                    + document.getElementsByClassName('content__icons--green').length
+                                    + document.getElementsByClassName('content__icons--orange').length) {
+                                        console.log('comments')
+                                        document.getElementById('save_after_comments').hidden = false
+                                        document.getElementById('back_to_recap').hidden = true
+                                    }
+                                else {
+                                    console.log('no comments')
+                                    document.getElementById('save_after_comments').hidden = true
+                                    document.getElementById('back_to_recap').hidden = false
+
+                                }
+                            </script>
+                        </div>
                     {% endif %}
                 </div>
             </form>
