--- a/templates/conventions/programme.html
+++ b/templates/conventions/programme.html
@@ -90,13 +90,13 @@
                     </div>
                 </div>
                 {% include "common/mandatory_fields_info.html" %}
-                <div class="fr-col-md-12  fr-py-5w button-bar">
-                    {% include "common/button/previous.html" with precedent='conventions:bailleur' convention_uuid=convention.uuid %}
+                <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
                         {% include "common/button/next_and_save.html" with suivant='conventions:programme' convention_uuid=convention.uuid editable=editable %}
                     {% else %}
                         {% include "common/button/next.html" with suivant='conventions:cadastre' convention_uuid=convention.uuid %}
                     {% endif %}
+                    {% include "common/button/previous.html" with precedent='conventions:bailleur' convention_uuid=convention.uuid %}
                 </div>
             </form>
         </div>
