--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -15,7 +15,7 @@
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12  fr-my-5w">
+                    <div class="fr-col-md-12 fr-mt-5w">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - Stationnements</h2> -->
 
                         <h4>Liste des stationnements associés au lot conventionné</h4>
@@ -78,13 +78,13 @@
                     </div>
                 </div>
                 {% include "common/mandatory_fields_info.html" %}
-                <div class="form-button-footer fr-col-md-12  fr-py-5w">
-                    {% include "common/button/previous.html" with precedent='conventions:annexes' convention_uuid=convention.uuid %}
+                <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
                         {% include "common/button/next_and_save.html" with suivant='conventions:stationnements' convention_uuid=convention.uuid editable=editable %}
                     {% else %}
                         {% include "common/button/next.html" with suivant='conventions:comments' convention_uuid=convention.uuid %}
                     {% endif %}
+                    {% include "common/button/previous.html" with precedent='conventions:annexes' convention_uuid=convention.uuid %}
                 </div>
             </form>
         </div>
