--- a/templates/common/form/select_enum.html
+++ b/templates/common/form/select_enum.html
@@ -10,7 +10,7 @@
             class="fr-select {% if form_input.errors %}fr-select--error{% endif %}"
             id="{{form_input.id_for_label}}"
             name="{{form_input.html_name}}"
-            {% if not editable %}disabled{% endif %}>
+            {% include "common/form/disable_form_input.html" %}>
             {% if not without_empty_option %}
                 <option value="" {% if not form_input.value %}selected{% endif %} disabled hidden></option>
             {% endif %}
