--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -18,6 +18,7 @@
     <div class="fr-container-fluid ds_banner">
         <div class="fr-container">
             {% include "common/form/conventionform_header.html" %}
+            {% csrf_token %}
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-md-12 fr-my-5w">
                     {% if not convention.is_submitted %}
@@ -58,8 +59,8 @@
                                             {% include "common/display_field_if_exists.html" with label="Nom" value=bailleur.nom object_field="bailleur__nom__"|add:bailleur_uuid %}
                                             {% include "common/display_field_if_exists.html" with label="SIRET ou SIREN" value=bailleur.siret object_field="bailleur__siret__"|add:bailleur_uuid %}
                                             {% include "common/display_field_if_exists.html" with label="Capital social" value=bailleur.capital_social object_field="bailleur__capital_social__"|add:bailleur_uuid %}
-                                            {% include "common/display_field_if_exists.html" with label="Adresse" value=bailleur.adresse object_field="bailleur__capital_social__"|add:bailleur_uuid %}
-                                            {% include "common/display_field_if_exists.html" with label="Code postal" value=bailleur.code_postal object_field="bailleur__capital_social__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Adresse" value=bailleur.adresse object_field="bailleur__adresse__"|add:bailleur_uuid %}
+                                            {% include "common/display_field_if_exists.html" with label="Code postal" value=bailleur.code_postal object_field="bailleur__code_postal__"|add:bailleur_uuid %}
                                             {% include "common/display_field_if_exists.html" with label="Ville" value=bailleur.ville object_field="bailleur__ville__"|add:bailleur_uuid %}
                                             {% include "common/display_field_if_exists.html" with label="Nom du signataire de la convention" value=bailleur.dg_nom object_field="bailleur__dg_nom__"|add:bailleur_uuid %}
                                             {% include "common/display_field_if_exists.html" with label="Fonction du signataire de la convention" value=bailleur.dg_fonction object_field="bailleur__dg_fonction__"|add:bailleur_uuid %}
@@ -427,10 +428,9 @@
                 </div>
             </div>
 
-            <div class="form-button-footer fr-col-md-12  fr-py-5w">
+            <div class="form-button-footer fr-col-md-12 fr-py-5w">
                 {% if request.user.is_bailleur %}
                     {% if convention.is_bailleur_editable %}
-                        {% include "common/button/previous.html" with precedent='conventions:comments' convention_uuid=convention.uuid %}
                         <div>
                             <form method="post" action="{% url 'conventions:save' convention_uuid=convention.uuid %}">
                                 {% csrf_token %}
@@ -442,13 +442,13 @@
                                 </button>
                             </form>
                         </div>
+                        {% include "common/button/previous.html" with precedent='conventions:comments' convention_uuid=convention.uuid %}
                     {% else %}
                         {% include "common/button/return_convention_index.html" %}
                     {% endif %}
                 {% endif %}
                 {% if request.user.is_instructeur %}
                     {% if convention.is_instructeur_editable %}
-                        {% include "common/button/previous.html" with precedent='conventions:comments' convention_uuid=convention.uuid %}
                         <div>
                             <form method="post" action="{% url 'conventions:generate' convention_uuid=convention.uuid %}">
                                 {% csrf_token %}
@@ -457,7 +457,7 @@
                                 </button>
                             </form>
                         </div>
-
+                        {% include "common/button/previous.html" with precedent='conventions:comments' convention_uuid=convention.uuid %}
                     {% else %}
                         {% include "common/button/return_convention_index.html" %}
                     {% endif %}
